# nemdb

./: .gitignore  .pre-commit-config.yaml  DERR_data_Jan_2025.parquet  LICENSE  README.md  pyproject.toml
src/nemdb/: __init__.py  config.py  logger.py  main.py  utils.py
src/nemdb/artefacts/: ISP_2023.xlsx  ISP_2024.xlsx
src/nemdb/dnsp/: __init__.py  ausgrid.py  ausnet.py  common.py  cppal.py  dnsp.py  endeavour.py  energex.py  ergon.py  essential_energy.py  jemena.py  sapn.py  tasnetworks.py  united_energy.py
src/nemdb/geodata/: geodata.py  transformations.py
src/nemdb/isp/: __init__.py  isp.py
src/nemdb/nemweb/: __init__.py  dbloader.py  der_register.py  nemweb.py  utils.py
test/: test_geodata.py  test_isp.py  test_nemweb.py
