[project]
name = "nemdb"
version = "0.1.0"
description = "Utilities to process NEMWEB data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "fastexcel>=0.12.1",
    "fsspec>=2025.3.2",
    "gcsfs>=2025.3.2",
    "geopandas>=1.0.1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "polars>=1.20.0",
    "pre-commit>=4.2.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "structlog>=25.1.0",
    "tqdm>=4.67.1",
]

[project.scripts]
populate = "nemdb:main.populate"

[project.optional-dependencies]
viz = [
    "plotly>=6.0.1",
]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
